@@ -37,13 +37,11 @@ double dnorm4(double x, double mu, double sigma, int give_log)
     if (ISNAN(x) || ISNAN(mu) || ISNAN(sigma))
 	return x + mu + sigma;
 #endif
+    if (sigma < 0) ML_ERR_return_NAN;
     if(!R_FINITE(sigma)) return R_D__0;
     if(!R_FINITE(x) && mu == x) return ML_NAN;/* x-mu is NaN */
-    if (sigma <= 0) {
-	if (sigma < 0) ML_ERR_return_NAN;
-	/* sigma == 0 */
+    if (sigma == 0) 
 	return (x == mu) ? ML_POSINF : R_D__0;
-    }
     x = (x - mu) / sigma;
 
     if(!R_FINITE(x)) return R_D__0;
